force-app/main/default/objects/Employee__c/Employee__c.object-meta.xml
<CustomObject>
    <label>社員</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>社員名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>