force-app/main/default/objects/Employee__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <label>住所_丁目・番地</label>
    <length>100</length>
    <type>Text</type>
</CustomField>