force-app/main/default/objects/Employee__c/fields/Applicant__c.field-meta.xml
<CustomField>
    <fullName>Applicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>応募者</label>
    <referenceTo>Applicant__c</referenceTo>
    <relationshipLabel>社員</relationshipLabel>
    <relationshipName>EmployeeToApplicant</relationshipName>
    <type>Lookup</type>
</CustomField>