force-app/main/default/objects/Employee__c/fields/BigMonthPrice__c.field-meta.xml
<CustomField>
    <fullName>BigMonthPrice__c</fullName>
    <label>最大提案単価</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>