force-app/main/default/objects/Employee__c/fields/Building__c.field-meta.xml
<CustomField>
    <fullName>Building__c</fullName>
    <label>住所_建物・部屋番号</label>
    <length>100</length>
    <type>Text</type>
</CustomField>