force-app/main/default/objects/Employee__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>住所_市区町村</label>
    <length>100</length>
    <type>Text</type>
</CustomField>