force-app/main/default/objects/Employee__c/fields/CLanguageYears__c.field-meta.xml
<CustomField>
    <fullName>CLanguageYears__c</fullName>
    <label>C言語</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>