force-app/main/default/objects/Employee__c/fields/CobolCheck__c.field-meta.xml
<CustomField>
    <fullName>CobolCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cobol</label>
    <type>Checkbox</type>
</CustomField>