force-app/main/default/objects/Employee__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>専攻学科</label>
    <length>100</length>
    <type>Text</type>
</CustomField>