force-app/main/default/objects/Employee__c/fields/DotNetYears__c.field-meta.xml
<CustomField>
    <fullName>DotNetYears__c</fullName>
    <label>.Net</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>