force-app/main/default/objects/Employee__c/fields/EmergencyContact__c.field-meta.xml
<CustomField>
    <fullName>EmergencyContact__c</fullName>
    <label>緊急連絡先</label>
    <length>80</length>
    <type>Text</type>
</CustomField>