force-app/main/default/objects/Employee__c/fields/EmployeeDivision__c.field-meta.xml
<CustomField>
    <fullName>EmployeeDivision__c</fullName>
    <label>社員区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>正社員</fullName>
            </value>
            <value>
                <fullName>契約社員</fullName>
            </value>
            <value>
                <fullName>パート</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>