force-app/main/default/objects/Employee__c/fields/JapaneseCertification__c.field-meta.xml
<CustomField>
    <fullName>JapaneseCertification__c</fullName>
    <label>日本語資格</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N1、N2、N3、N4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>