force-app/main/default/objects/Employee__c/fields/JapaneseLevel__c.field-meta.xml
<CustomField>
    <fullName>JapaneseLevel__c</fullName>
    <label>日本語レベール</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ビジネス</fullName>
            </value>
            <value>
                <fullName>日常会話</fullName>
            </value>
            <value>
                <fullName>作業会話</fullName>
            </value>
            <value>
                <fullName>仕様書読み</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>