force-app/main/default/objects/Employee__c/fields/LastName_Kana__c.field-meta.xml
<CustomField>
    <fullName>LastName_Kana__c</fullName>
    <label>名（カナ）</label>
    <length>80</length>
    <type>Text</type>
</CustomField>