force-app/main/default/objects/Employee__c/fields/Prefecture__c.field-meta.xml
<CustomField>
    <fullName>Prefecture__c</fullName>
    <label>住所_都道府県</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>東京都</fullName>
            </value>
            <value>
                <fullName>神奈川県</fullName>
            </value>
            <value>
                <fullName>埼玉県</fullName>
            </value>
            <value>
                <fullName>千葉県</fullName>
            </value>
            <value>
                <fullName>群馬県</fullName>
            </value>
            <value>
                <fullName>山梨県</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>