force-app/main/default/objects/Employee__c/fields/SAPCheck__c.field-meta.xml
<CustomField>
    <fullName>SAPCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SAP</label>
    <type>Checkbox</type>
</CustomField>