force-app/main/default/objects/Employee__c/fields/SFDCCheck__c.field-meta.xml
<CustomField>
    <fullName>SFDCCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SFDC</label>
    <type>Checkbox</type>
</CustomField>