force-app/main/default/objects/Employee__c/fields/SFDCYears__c.field-meta.xml
<CustomField>
    <fullName>SFDCYears__c</fullName>
    <label>SFDC</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>