force-app/main/default/objects/Employee__c/fields/SmallMonthPrice__c.field-meta.xml
<CustomField>
    <fullName>SmallMonthPrice__c</fullName>
    <label>最小提案単価</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>