force-app/main/default/objects/Employee__c/fields/Specialty__c.field-meta.xml
<CustomField>
    <fullName>Specialty__c</fullName>
    <label>得意分野</label>
    <type>TextArea</type>
</CustomField>