force-app/main/default/objects/Employee__c/fields/ssss__c.field-meta.xml
<CustomField>
    <fullName>ssss__c</fullName>
    <formula>Salary__c +100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ssss</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>