force-app/main/default/objects/Employee__c/fields/StartJobDay__c.field-meta.xml
<CustomField>
    <fullName>StartJobDay__c</fullName>
    <label>入場可能時間</label>
    <type>Date</type>
</CustomField>