force-app/main/default/objects/Employee__c/recordTypes/tempPeople.recordType-meta.xml
<RecordType>
    <fullName>tempPeople</fullName>
    <active>true</active>
    <label>tempPeople</label>
</RecordType>