force-app/main/default/objects/Employee__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Salary__c</columns>
    <columns>Age__c</columns>
    <columns>JoinDate__c</columns>
    <columns>JapaneseCertification__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>