force-app/main/default/objects/Employee__c/listViews/WEB_TO_LEAD_Employee.listView-meta.xml
<ListView>
    <fullName>WEB_TO_LEAD_Employee</fullName>
    <filterScope>Queue</filterScope>
    <label>WEB‐TO-LEAD</label>
    <queue>WEB_TO_LEAD</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>